# Ctrl-Crowd

./: .env  README.md  mathlab.py  mongoose.js  package-lock.json  package.json  requirements.txt  server.js
HW/ESP32/: CMakeLists.txt
HW/ESP32/components/: CMakeCache.txt  CMakeLists.txt  Makefile  crowd_counter.cpp  image_data.cc  image_data.h  model_data.h
api/: count_server.py
backend/: server.js
frontend/: index.css  index.html  script.js
models/: crowdData.js
res/: annotations.csv
train/: CompactTrainer.py  Inference.py  Inference2.py  Inference3.py  Inference4.py  SimpleTrain.py  convert.py  convert_to_tflite.py  imagecc.py  mat2csv.py  quantize.py
weights/mobilenetv2/: compact.tflite  initial.tflite
